Operation: CreateLaboratory + bug fixes
